# slstk3400a-blink-rs

./: .gitignore  Cargo.toml  Embed.toml  README.MD  memory.x  rust-toolchain.toml  x.json  x.py  z.py
.cargo/: config.toml
.github/workflows/: ci.yml
blink/: Cargo.toml
blink/src/: main.rs
demos/adc-temp/: Cargo.toml
demos/adc-temp/src/: main.rs
demos/blink/: Cargo.toml
demos/blink-captouch/: Cargo.toml
demos/blink-captouch/src/: main.rs
demos/blink-pb/: Cargo.toml
demos/blink-pb/src/: main.rs
demos/blink-rtc/: Cargo.toml
demos/blink-rtc/src/: main.rs
demos/blink-systick/: Cargo.toml
demos/blink-systick/src/: main.rs
demos/blink/src/: main.rs
demos/lcd-counter/: Cargo.toml
demos/lcd-counter/src/: main.rs
demos/lcd-hello/: Cargo.toml
demos/lcd-hello/src/: main.rs
demos/pulse-counter/: Cargo.toml
demos/pulse-counter/src/: main.rs
demos/pwm-led/: Cargo.toml
demos/pwm-led/src/: main.rs
demos/space-invaders/: Cargo.toml
demos/space-invaders/src/: game.rs  main.rs  render.rs  rng.rs  sprites.rs
demos/stopwatch/: Cargo.toml
demos/stopwatch/src/: main.rs
demos/usb-audio/: Cargo.toml
demos/usb-audio/src/: main.rs
demos/usb-cdc/: Cargo.toml
demos/usb-device/: Cargo.toml
demos/usb-device/src/: main.rs
demos/usb-hid/: Cargo.toml
demos/usb-hid/src/: main.rs
demos/usb-midi/: Cargo.toml
demos/usb-midi/src/: main.rs
demos/usb-msc/: Cargo.toml
demos/usb-msc/src/: main.rs
demos/usb-video/: Cargo.toml
demos/usb-video/src/: main.rs
src/: main.rs
support/efm32hg322_hal/: Cargo.toml
support/efm32hg322_hal/src/: clocks.rs  cmu.rs  delay.rs  gpio.rs  lib.rs  rtc.rs  systick.rs  time_util.rs  timer.rs  watchdog.rs
support/efm32hg322_hal/src/cmu/: clocks.rs  oscillator.rs
support/efm32hg322_hal/src/cmu/oscillator/: hfrco.rs
support/efm32hg322_hal/src/oscillator/: hfrco.rs  hfxo.rs  lfrco.rs  lfxo.rs  mod.rs  ushfrco.rs
support/efm32hg322_pac/: Cargo.toml
support/efm32hg322_pac/src/: acmp0.rs  adc0.rs  aes.rs  cmu.rs  dma.rs  emu.rs  gpio.rs  i2c0.rs  idac0.rs  leuart0.rs  lib.rs  msc.rs  mtb.rs  pcnt0.rs  prs.rs  rmu.rs  rtc.rs  timer0.rs  timer1.rs  usart0.rs  usart1.rs  usb.rs  vcmp.rs  wdog.rs
support/efm32hg322_pac/src/acmp0/: ctrl.rs  ifc.rs  inputsel.rs  route.rs  status.rs
support/efm32hg322_pac/src/adc0/: biasprog.rs  cal.rs  cmd.rs  ctrl.rs  ien.rs  if_.rs  ifc.rs  ifs.rs  scanctrl.rs  singlectrl.rs  status.rs
support/efm32hg322_pac/src/aes/: cmd.rs  ctrl.rs  data.rs  ien.rs  if_.rs  ifc.rs  ifs.rs  keyla.rs  keylb.rs  keylc.rs  keyld.rs  status.rs  xordata.rs
support/efm32hg322_pac/src/cmu/: auxhfrcoctrl.rs  calctrl.rs  cmd.rs  ctrl.rs  hfcoreclkdiv.rs  hfcoreclken0.rs  hfperclkdiv.rs  hfperclken0.rs  hfrcoctrl.rs  ien.rs  if_.rs  ifc.rs  ifs.rs  lfaclken0.rs  lfapresc0.rs  lfbclken0.rs  lfbpresc0.rs  lfcclken0.rs  lfclksel.rs  lfrcoctrl.rs  oscencmd.rs  pcntctrl.rs  route.rs  status.rs  syncbusy.rs  usbcrctrl.rs  ushfrcoconf.rs  ushfrcoctrl.rs  ushfrcotune.rs
support/efm32hg322_pac/src/dma/: altctrlbase.rs  ch0_ctrl.rs  ch1_ctrl.rs  ch2_ctrl.rs  ch3_ctrl.rs  ch4_ctrl.rs  ch5_ctrl.rs  chaltc.rs  chalts.rs  chenc.rs  chens.rs  chpric.rs  chpris.rs  chreqmaskc.rs  chreqmasks.rs  chreqstatus.rs  chsreqstatus.rs  chswreq.rs  chuseburstc.rs  chusebursts.rs  chwaitstatus.rs  config.rs  ctrlbase.rs  errorc.rs  ien.rs  if_.rs  ifc.rs  ifs.rs  status.rs
support/efm32hg322_pac/src/emu/: auxctrl.rs  ctrl.rs
support/efm32hg322_pac/src/gpio/: cmd.rs  ctrl.rs  em4wucause.rs  em4wuen.rs  em4wupol.rs  extifall.rs  extipselh.rs  extipsell.rs  extirise.rs  ien.rs  if_.rs  ifc.rs  ifs.rs  insense.rs  pa_ctrl.rs  pa_din.rs  pa_doutclr.rs  pa_doutset.rs  pa_modeh.rs  pa_model.rs  pb_ctrl.rs  pb_din.rs  pb_doutclr.rs  pb_doutset.rs  pb_modeh.rs  pb_model.rs  pc_ctrl.rs  pc_din.rs  pc_doutclr.rs  pc_doutset.rs  pc_modeh.rs  pc_model.rs  pd_ctrl.rs  pd_din.rs  pd_doutclr.rs  pd_doutset.rs  pd_modeh.rs  pd_model.rs  pe_ctrl.rs  pe_din.rs  (+11 more)
support/efm32hg322_pac/src/i2c0/: cmd.rs  ctrl.rs  ien.rs  if_.rs  ifc.rs  ifs.rs  route.rs  saddr.rs  status.rs  txdata.rs
support/efm32hg322_pac/src/idac0/: cal.rs  ctrl.rs  curprog.rs  dutyconfig.rs
support/efm32hg322_pac/src/leuart0/: clkdiv.rs  ctrl.rs  ien.rs  ifc.rs  ifs.rs  input.rs  route.rs  status.rs  txdata.rs  txdatax.rs
support/efm32hg322_pac/src/msc/: cachehits.rs  cachemisses.rs  cmd.rs  ctrl.rs  ien.rs  if_.rs  ifc.rs  ifs.rs  irqlatency.rs  masslock.rs  readctrl.rs  status.rs  timebase.rs  writecmd.rs  writectrl.rs
support/efm32hg322_pac/src/mtb/: base.rs  flow.rs  master.rs  position.rs
support/efm32hg322_pac/src/pcnt0/: auxcnt.rs  ctrl.rs  ien.rs  if_.rs  ifc.rs  ifs.rs  input.rs  route.rs  syncbusy.rs
support/efm32hg322_pac/src/prs/: ch0_ctrl.rs  ch1_ctrl.rs  ch2_ctrl.rs  ch3_ctrl.rs  ch4_ctrl.rs  ch5_ctrl.rs  route.rs  swlevel.rs  swpulse.rs  tracectrl.rs
support/efm32hg322_pac/src/rmu/: ctrl.rs  rstcause.rs
support/efm32hg322_pac/src/rtc/: comp0.rs  comp1.rs  ien.rs  if_.rs  ifc.rs  ifs.rs  syncbusy.rs
support/efm32hg322_pac/src/timer0/: cc0_ccv.rs  cc0_ccvb.rs  cc0_ctrl.rs  cc1_ccvp.rs  cc1_ctrl.rs  ctrl.rs  dtctrl.rs  if_.rs  ifc.rs  route.rs  top.rs  topb.rs
support/efm32hg322_pac/src/timer1/: cc0_ccv.rs  cc0_ccvp.rs  cc1_ccv.rs  cc1_ccvb.rs  cc1_ctrl.rs  cc2_ccv.rs  cc2_ccvb.rs  cc2_ccvp.rs  dtctrl.rs  dtfc.rs  ifs.rs  route.rs
support/efm32hg322_pac/src/timer2/: cc0_ctrl.rs  cc2_ccv.rs  cc2_ctrl.rs  dtfc.rs  ien.rs  ifc.rs  ifs.rs  status.rs  topb.rs
support/efm32hg322_pac/src/usart0/: clkdiv.rs  ctrl.rs  i2sctrl.rs  ien.rs  if_.rs  ifc.rs  ifs.rs  irctrl.rs  status.rs  trigctrl.rs  txdata.rs  txdatax.rs  txdouble.rs  txdoublex.rs
support/efm32hg322_pac/src/usart1/: clkdiv.rs  ien.rs  (+8 more)
support/efm32hg322_pac/svd/: EFM32HG322F64.svd  EFM32HG322F64.svd.patched  EFM32HG322F64.yaml  gen.sh
support/efm32hg322_usb/: Cargo.toml  README.md
support/efm32hg322_usb/src/: bus.rs  cdc_acm.rs  hid_keyboard.rs  lib.rs  msc.rs  video.rs
support/slstk3400a/: Cargo.toml
support/slstk3400a/src/: display.rs  leds.rs  lib.rs  push_buttons.rs
(+62 files in other folders)
