[workspace]
resolver = "2"

members = [
    "demos/blink",
    "demos/blink-systick",
    "demos/blink-rtc",
    "support/efm32hg322_hal",
    "support/efm32hg322_pac",
    "support/slstk3400a"
]

[workspace.dependencies]
bare-metal = "1.0.0"
vcell = "0.1.0"
portable-atomic = { version = "1", default-features = false, features = ["critical-section"]}

embedded-hal = { version = "0.2", features = ["unproven"] }
panic-halt = "0.2"
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7", features = ["device"] }
critical-section = "1"
defmt = "0.3"
defmt-rtt = "0.4"

efm32hg322-pac = { path = "support/efm32hg322_pac" }
efm32hg322-hal = { path = "support/efm32hg322_hal" }
slstk3400a = { path = "support/slstk3400a" }
