[workspace]
resolver = "2"

members = [
    "demos/adc-temp",
    "demos/blink-captouch",
    "demos/blink-pb",
    "demos/blink-rtc",
    "demos/blink-systick",
    "demos/blink",
    "demos/lcd-counter",
    "demos/lcd-hello",
    "demos/pulse-counter",
    "demos/pwm-led",
    "demos/space-invaders",
    "demos/stopwatch",
    "demos/usb-audio",
    "demos/usb-cdc",
    "demos/usb-hid",
    "demos/usb-midi",
    "demos/usb-msc",
    "support/efm32hg322_hal",
    "support/efm32hg322_pac",
    "support/efm32hg322_usb",
    "support/slstk3400a"
]

[workspace.dependencies]
bare-metal = "1.0.0"
vcell = "0.1.0"
portable-atomic = { version = "1.13", default-features = false, features = ["critical-section"]}

embedded-hal = { version = "1.0" }
panic-halt = "1.0"
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7", features = ["device"] }
critical-section = "1.2"
defmt = "1.0"
defmt-rtt = "1.1"

efm32hg322-pac = { path = "support/efm32hg322_pac" }
efm32hg322-hal = { path = "support/efm32hg322_hal" }
efm32hg322-usb = { path = "support/efm32hg322_usb" }
slstk3400a = { path = "support/slstk3400a" }
