[package]
authors = ["kromych <kromych@users.noreply.github.com>"]
categories = ["embedded", "no-std", "efm32"]
description = "DWC2 USB device driver for EFM32HG322"
name = "efm32hg322-usb"
keywords = ["arm", "cortex-m", "usb"]
license = "MIT"
version = "0.0.1"
edition = "2021"

[features]
default = []
## Enable DWC2 internal DMA mode.
##
## When active, the USB controller transfers data between endpoint FIFOs
## and RAM buffers via its AHB DMA master instead of CPU-driven FIFO reads/writes.
## This frees the CPU during transfers but requires static DMA buffers (~1.3 KiB RAM).
## When disabled (default), the driver uses the original FIFO-polling mode.
dma = []

[dependencies]
cortex-m.workspace = true
critical-section.workspace = true
defmt.workspace = true

portable-atomic.workspace = true

efm32hg322-pac.workspace = true
