[package]
authors = ["kromych <kromych@users.noreply.github.con"]
categories = ["embedded", "no-std", "efm32"]
description = "SLSTK3400A support"
keywords = ["arm", "cortex-m"]
license = "MIT"
name = "slstk3400a"
version = "0.0.1"
edition = "2021"

[dependencies]
efm32hg322-pac.workspace = true
efm32hg322-hal.workspace = true

embedded-hal.workspace = true
panic-halt.workspace = true
cortex-m.workspace = true
cortex-m-rt.workspace = true
critical-section.workspace = true
defmt.workspace = true
defmt-rtt.workspace = true
